2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	*BigIntegerTest.cs: Added.