@@ -1,3 +1,7 @@
 2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	*BigIntegerTest.cs: Tests for long constructor and coersion operator.
+
+2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	*BigIntegerTest.cs: Added.
